--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ nav{
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+.logo:hover{
+    color:crimson;
 }
 
 .nav-links{
@@ -36,6 +42,24 @@ nav{
     letter-spacing: 3px;
     font-weight: bold;
     font-size: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+.nav-links a:hover{
+    color:crimson;
+}
+
+button{
+    padding: 9px 25px;
+    background-color: rgba(0,136,169,1);
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover{
+    background-color: rgba(0,136,169,0.8);
 }
 
 .burger{
