--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-nav{
+.navbar{
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -50,7 +50,7 @@ nav{
     color:crimson;
 }
 
-button{
+.sign-in{
     padding: 9px 25px;
     background-color: rgba(0,136,169,1);
     border: none;
@@ -58,7 +58,7 @@ button{
     transition: all 0.3s ease 0s;
 }
 
-button:hover{
+.sign-in:hover{
     background-color: rgba(0,136,169,0.8);
 }
 
@@ -94,7 +94,7 @@ button:hover{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 25%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
